# raytracing

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  runtests.yml
include/: canvas.h  color.h  tuple.h  utils.h
src/: CMakeLists.txt  canvas.cc  color.cc  tuple.cc
test/: CMakeLists.txt  canvas_test.cc  color_test.cc  tuple_test.cc
